name:                network-uri
version:             2.6.0.0
synopsis:            URI manipulation
description:
  This package provides an URI manipulation inteface.
  .
  In network-2.6 the @Network.URI@ module was split off from the
  network package into this package. If you're using the @Network.URI@
  module you can automatically get it from the right package by adding
  this to your .cabal file:
  .
  > flag network-uri
  >   description: Get Network.URI from the network-uri package
  >   default: True
  >
  > library
  >   -- ...
  >   if flag(network-uri)
  >     build-depends: network-uri >= 2.6
  >   else
  >     build-depends: network < 2.6
  .
  If you want to use other modules from the network package while
  using the @Network.URI@ modules from this package, add a @network >
  2.6@ clause to the first @build-depends@ line.
homepage:            https://github.com/haskell/network-uri
bug-reports:         https://github.com/haskell/network-uri/issues
license:             BSD3
license-file:        LICENSE
maintainer:          johan.tibell@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Network.URI
  build-depends:
    base >= 3 && < 5,
    parsec >= 3.0 && < 3.2
  default-extensions: CPP, DeriveDataTypeable
  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell98

test-suite uri
  hs-source-dirs: tests
  main-is: uri001.hs
  type: exitcode-stdio-1.0

  build-depends:
    base < 5,
    HUnit,
    network,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2

  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell98

source-repository head
  type:     git
  location: git://github.com/haskell/network-uri.git