name:                network-uri
version:             2.5.0.0
synopsis:            URI manipulation
description:
  This package provides an URI manipulation interface.
  .
  Version 2.5 (unlike the following versions) is a dummy package that
  prevents module name clashes between network-uri and network, if
  used together with a Cabal flag as described below.
  .
  In network-2.6 the @Network.URI@ module was split off from the
  network package into this package. If you're using the @Network.URI@
  module you can automatically get it from the right package by adding
  this to your .cabal file:
  .
  > flag network-uri
  >   description: Get Network.URI from the network-uri package
  >   default: True
  >
  > library
  >   -- ...
  >   if flag(network-uri)
  >     build-depends: network-uri >= 2.6, network >= 2.6
  >   else
  >     build-depends: network-uri < 2.6, network < 2.6
  .
  That is, get the module from either network < 2.6 or from
  network-uri >= 2.6.
homepage:            https://github.com/haskell/network-uri
bug-reports:         https://github.com/haskell/network-uri/issues
license:             BSD3
license-file:        LICENSE
maintainer:          johan.tibell@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell98

source-repository head
  type:     git
  location: git://github.com/haskell/network-uri.git